--- a/styles/all/template/event/posting_editor_message_after.html
+++ b/styles/all/template/event/posting_editor_message_after.html
@@ -1,5 +1,5 @@
 <div class="panel bg2" style="text-align: center">
   <div style="position:relative;">
-      <script type="text/javascript" src="http://www.zupimages.net/api/scripts/api.php?background=ffffff&amp;color=000000&amp;header=yes&amp;lastimage=yes"></script>
-    </div>
+      <script type="text/javascript" src="https://www.zupimages.net/api/embed.php?background=transparent&amp;color=000000&amp;header=true&amp;lastimage=true"></script>
+</div>
 </div>
